docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/products/_product-detail.scss
.short-description-wrapper,
.delivery-options-wrapper {
  .field__label {
    font-size: 0.875rem;
    font-family: $vs-bold;
    font-weight: normal;
  }
}

.short-description-wrapper {
  .field__content,
  .show-less-link,
  .read-more-description-link-mobile,
  .read-more-description-link {
    font-size: 0.75rem;
    font-weight: normal;
  }

  .read-more-description-link {
    margin: 0.75rem 0 0.875rem;
  }

  .field__label {
    margin: 0.5rem 0 0.25rem;
  }
}

.nodetype--acq_product,
.path--cart {
  span.out-of-stock {
    font-family: $vs-regular;
    font-size: 0.875rem;
    margin: 1rem 0;
  }

  .form-type-select {
    label {
      color: $pdp_filter_selector_label;
    }
  }
}

.field--name-field-skus {
  .sku-base-form {
    button[type="submit"] {
      text-transform: uppercase;
      height: 2.5rem;
      margin-top: 2.125rem;

      @include breakpoint($only-tablet) {
        float: $left;
        margin-#{$left}: 1.5rem;
      }
    }
  }
}

.acq-content-product {
  .content__title_wrapper {
    h1,
    h1 span {
      font-size: 1rem;
    }

    h1 span {
      &.title--sub {
        display: block;
        font-size: 0.875rem;
        color: $pdp_title_collection_name;
        padding-bottom: 0.25rem;
      }
    }

    .content--item-code {
      font-size: 0.625rem;
    }
  }

  .price-block {
    clear: both;
  }
}

.acq-content-product {
  .content__sidebar {
    @include breakpoint($only-tablet) {
      margin: 0 1rem;
    }
  }
}

.store-finder-form-wrapper {
  .search-store {
    button {
      text-transform: none;
    }
  }
}

.content__title_wrapper {
  .price {
    margin-bottom: 0.75rem;
  }

  .content--item-code {
    padding-bottom: 0.625rem;
  }

  .price--discount {
    display: inline;
  }
}

.basic-details-wrapper {
  .field--name-field-skus {
    .form-item-quantity {
      @include breakpoint($only-mobile) {
        width: 100%;

        &::after {
          width: 2.375rem;
          font-size: 2.375rem;
        }

        select {
          &.form-select {
            width: 100%;
          }
        }
      }
    }
  }
}

// SideBar content theming.

.select2Option {
  display: block;
}

#configurable_ajax {
  .configurable-select,
  .form-item-configurables-color,
  .form-item-configurables-band-size,
  .form-item-configurables-cup-size {
    .list-title {
      span {
        font-size: 0.75rem;
        line-height: 1.33;
        color: $pdp_filter_selector_label;

        @include breakpoint($only-mobile) {
          font-size: 0.875rem;
        }
      }
    }

    > label {
      display: none;
    }

    .select2Option {
      li {
        a,
        span {
          font-size: 0.875rem;
          line-height: 1.29;
          padding: 0.5625rem 0.6119rem;
          margin: 0.4375rem 0 0;
          margin-#{$right}: 0.625rem;
          min-width: 2.375rem;
        }
      }
    }
  }

  .form-item-configurables-color {
    .select2Option {
      li {
        display: flex;
        align-items: center;

        &.li-swatch-image {
          a,
          span {
            border: none;
            width: 2.375rem;
            height: 2.375rem;
            position: relative;
            padding: 0;

            &.picked {
              background: transparent;

              &::after {
                content: '';
                position: absolute;
                display: inline-block;
                top: -0.1875rem;
                #{$left}: -0.1875rem;
                #{$right}: -0.1875rem;
                bottom: -0.1875rem;
                z-index: 1;
                border: 1px solid $pdp_size_option_border;
                pointer-events: none;
              }
            }

            &.white {
              box-shadow: 0 0 0 1px inset $pdp_white_color_attribute;
            }
          }
        }
      }

      .select-buttons {
        display: flex;
        flex-flow: row wrap;
        padding: 0.1875rem 0;
      }
    }
  }
}

.basic-details-wrapper {
  .field--name-field-skus {
    border-bottom: none;

    .form-item-quantity {
      &::after {
        @include breakpoint($only-tablet) {
          #{$right}: 0.3125rem;
        }
      }

      select {
        &.form-select {
          padding-#{$left}: 0.625rem;
        }
      }

      &.form-item {
        &.form-type-select {
          margin-top: 2.125rem;

          @include breakpoint($only-tablet) {
            float: $left;
          }
        }
      }

      label {
        font-size: 0.875rem;
        line-height: 1.33;
        color: $pdp_filter_selector_label;
        padding: 0;
        top: -1.375rem;
      }
    }
  }
}

.field--name-field-skus {
  .sku-base-form {
    > div,
    > .js-form-wrapper {
      @include breakpoint($upto-desktop) {
        width: 100%;
      }
    }
  }
}

.basic-details-wrapper {
  .field--name-field-skus {
    #configurable_ajax {
      .configurable-select,
      .form-item-configurables-cup-size,
      .form-item-configurables-band-size {
        label {
          @include u-visibility(none);
        }

        .ajax-progress-throbber {
          @include u-visibility(none);
        }

        @include breakpoint($only-mobile) {
          @include select-wrapper(12.3125rem);

          padding: 0;
          margin-top: 0.5em;
          position: relative;
          z-index: 3;
          width: 100%;
          min-height: 2.188rem;

          &::after {
            top: 0;
            z-index: 1;
            font-size: 2.375rem;
          }

          label {
            @include u-visibility(block);

            position: absolute;
            top: -1.6875rem;
            font-size: 0.875rem;
            padding: 0.3125rem 0;
            padding-#{$right}: 1.25rem;
            #{$left}: 0;
          }

          select.form-select {
            @include select-style(12.3125rem);

            width: 100%;
            padding-#{$left}: 0.625rem;
          }
        }
      }

      .form-item-configurables-size {
        &::after {
          content: none;
        }
      }
    }
  }
}

.field--name-field-skus {
  .sku-base-form {
    #configurable_ajax {
      padding: 0.875rem 0 0;

      @include breakpoint($only-mobile) {
        .form-item {
          margin: 1.25rem 0 0;
          padding-bottom: 1.25rem;

          &.configurable-swatch {
            margin-top: 0;
          }

          &.form-item-configurables-cup-size {
            margin: 1.25rem 0 0;
            padding-bottom: 0.875rem;
          }

          &.form-item-configurables-band-size {
            margin: 1.25rem 0 0;
            padding-bottom: 1.25rem;
          }

          &.form-item-configurables-color {
            padding-bottom: 2.125rem;
          }
        }
      }
    }
  }
}

.select2Option {
  .select-buttons {
    li {
      &.disabled {
        a,
        span {
          background: url("../imgs/icons/disabled.png") no-repeat;
          background-size: 100% 100%;
          border: 1px solid $pdp_swatch_disabled;
          color: $pdp_swatch_disabled;
        }
      }
    }
  }
}

.delivery-options-wrapper {
  .field__label {
    margin-top: 1.625rem;
  }

  .c-accordion__title {
    @include breakpoint($tablet) {
      padding: 0.375rem 0;
    }

    .subtitle {
      padding-bottom: 0.125rem;
      line-height: 1.33;
    }

    &::after {
      font-size: 2rem;
    }
  }
}

