CORE-4198: Fixing white color not displayed on ios devices.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/products/_product-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/products/_product-detail.scss
@@ -207,7 +207,8 @@
             }
 
             &.white {
-              box-shadow: 0 0 0 1px inset $pdp_white_color_attribute;
+              -webkit-appearance: none;
+              box-shadow: 0 0 0 1px $pdp_white_color_attribute;
             }
           }
         }
